--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title>tp1 BabylonJS</title>
+    <title>IAME</title>
     <meta charset="UTF-8">
         <link rel="stylesheet" href="css/default.css">
         <script src="lib/babylon.max.js"></script>
