--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="lib/babylon.max.js"></script>
         <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
         <script src="lib/oimo.js"></script>
-        <!--<script src="lib/cannon.js"></script> -->
+        <script src="lib/cannon.js"></script>
         <script type="module" src="js/main.js"></script>
     </head>
     <body>
