--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="css/default.css">
         <script src="lib/babylon.max.js"></script>
         <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
+        <!--<script src="lib/cannon.js"></script>-->
         <script src="lib/oimo.js"></script>
-        <script src="lib/cannon.js"></script>
+
         <script type="module" src="js/main.js"></script>
     </head>
     <body>
