--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
         <link rel="stylesheet" href="css/default.css">
         <script src="lib/babylon.max.js"></script>
-        <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
+        <!--script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>-->
         <script src="lib/cannon.js"></script>
         <script src="lib/oimo.js"></script>
         <script type="module" src="js/main.js"></script>
